--- a/SharpRemote/SharpRemote/Views/ShortcutPage.xaml
+++ b/SharpRemote/SharpRemote/Views/ShortcutPage.xaml
@@ -25,7 +25,9 @@
         <CollectionView.ItemsLayout>
             <GridItemsLayout
                 Orientation="Vertical"
-                Span="2" />
+                Span="2"
+                VerticalItemSpacing="5"
+                HorizontalItemSpacing="5" />
         </CollectionView.ItemsLayout>
         <CollectionView.GroupHeaderTemplate>
             <DataTemplate>
